--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar marina.jpg" alt="avatar da Marina" class="rounded-circle" width="150" height="150" srcset="">
-        <p class="lead">Marina Gouvêa</p>
+        <img src="img/meu avatar.jpg" alt="avatar da Marina" class="rounded-circle" width="150" height="150" srcset="">
+        <p class="lead">yasmin</p>
         <h1>Eu estudo Programação</h1>
         <p>Sou estudante da Escola Monsenhor Ignácio Gióia, localizada em São Luiz do Paraitinga. Durante as aulas de programação, desenvolvi alguns projetos. Espero que gostem!</p>
         <p>Minhas habilidades</p>
@@ -23,6 +23,12 @@
             <p class="badge bg-secondary">Scratch</p>
         </div>
     </header>
+    <main class="container">
+      <h2>meus projetos</h2>
+    <div class="row">
+
+</div>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
